Pin MkDocs version

--- a/.github/workflows/build-deploy-docs.yaml
+++ b/.github/workflows/build-deploy-docs.yaml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      MKDOCS_VERSION: 9.5.4
     steps:
       - uses: actions/checkout@v4
       - name: Configure Git Credentials
@@ -25,5 +27,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material
+      - run: pip install mkdocs-material==${{ env.MKDOCS_VERSION }}
       - run: mkdocs gh-deploy --force
